reports/bayes.log
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 1093, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/usr/local/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/usr/local/Cellar/python@3.9/3.9.17/Frameworks/Python.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 559, in async_execute
    await self.async_execute_cell(
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 854, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/usr/local/lib/python3.9/site-packages/nbclient/client.py", line 756, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
Calcul des statistiques 
data_means = data.groupby('Genre').mean()
data_variance = data.groupby('Genre').var()

taille_H_mean = data_means['taille'][data_variance.index == 'homme'].values[0]
poids_H_mean = data_means['poids'][data_variance.index == 'homme'].values[0]
pointure_H_mean = data_means['pointure'][data_variance.index == 'homme'].values[0]

taille_H_variance = data_variance['taille'][data_variance.index == 'homme'].values[0]
poids_H_variance = data_variance['poids'][data_variance.index == 'homme'].values[0]
pointure_H_variance = data_variance['pointure'][data_variance.index == 'homme'].values[0]

taille_F_mean = data_means['taille'][data_variance.index == 'femme'].values[0]
poids_F_mean = data_means['poids'][data_variance.index == 'femme'].values[0]
pointure_F_mean = data_means['pointure'][data_variance.index == 'femme'].values[0]

taille_F_variance = data_variance['taille'][data_variance.index == 'femme'].values[0]
poids_F_variance = data_variance['poids'][data_variance.index == 'femme'].values[0]
pointure_F_variance = data_variance['pointure'][data_variance.index == 'femme'].values[0]
------------------

[0;36m  Input [0;32mIn [3][0;36m[0m
[0;31m    Calcul des statistiques[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-3-6feda0ee98ee>, line 1)

